# storage-manager

./: .gitignore  LICENSE  README.md  app.py  commands.py  dirSize.ps1  dir_size.cpp  dir_utils.py  directories.py  directorySize.c  display.py  input_handler.py  main.py  messages.py  pyproject.toml  spinner.py  state.py  storageManager.py  ui_spinner.py
dir_size/: dir_size.cpp
src/stman/: __init__.py  benchmark.py  cli.py  commands.py  dir_size.cpp  dir_utils.py  display.py  input_handler.py  main.py  messages.py  state.py  ui_spinner.py
