[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stman"
version = "0.2.0"
description = "A CLI tool for interactive disk storage analysis on Windows."
authors = [
    { name = "Garrett Connell", email = "glconnell.tx@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["storage", "disk", "directory", "cli", "windows"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "psutil",
    "rich",
]

[project.scripts]
stman = "stman.cli:main"

[project.urls]
Homepage = "https://github.com/glcon/storage-manager"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stman = ["*.dll", "*.txt"]